--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,7 @@ jobs:
           uses: docker://alpine:latest
           with:
             entrypoint: /bin/sh
-            args: -c "echo 'nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\nnameserver 100.95.0.254' > /etc/resolv.conf && cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/"
+            args: -c "echo "nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\n# Too many DNS servers configured, the following entries may be ignored.\nnameserver 100.95.0.254\nnameserver 168.63.129.16\nsearch gpq2x2ivaaoebfs5ykq4ww3pqb.bx.internal.cloudapp.net" > /etc/resolv.conf && cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/"
 
         - name: Print client logs
           if: always()
