--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,9 +62,13 @@ jobs:
 
         - name: Access a secure resource from a docker
           uses: docker://alpine:latest
+          id: test_docker_curl
           with:
             entrypoint: /bin/sh
-            args: -c "echo "nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\n# Too many DNS servers configured, the following entries may be ignored.\nnameserver 100.95.0.254\nnameserver 168.63.129.16\nsearch gpq2x2ivaaoebfs5ykq4ww3pqb.bx.internal.cloudapp.net" > /etc/resolv.conf && cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/"
+            args: -c "cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/ >> $GITHUB_OUTPUT"
+
+        - run: |
+            echo "Docker curl output: ${{join(steps.test_docker_curl.outputs.*, '\n')}}"
 
         - name: Print client logs
           if: always()
