--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,10 +37,10 @@ jobs:
           with:
             service-key: ${{ secrets[matrix.service-key] }}
 
-        - name: (optional) Twingate logs
+        - name: Twingate logs
           run: journalctl -u twingate
 
-        - name: (optional) Twingate status
+        - name: Twingate status
           run: twingate status
 
         - name: Nslookup a secure resource
@@ -65,7 +65,7 @@ jobs:
           id: test_docker_curl
           with:
             entrypoint: /bin/sh
-            args: -c "cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/ >> $GITHUB_OUTPUT"
+            args: -c "echo "nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\nnameserver 100.95.0.254" > /etc/resolv.conf && cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/ >> $GITHUB_OUTPUT"
 
         - run: |
             echo "Docker curl output: ${{join(steps.test_docker_curl.outputs.*, '\n')}}"
