--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,7 +65,7 @@ jobs:
           id: test_docker_curl
           with:
             entrypoint: /bin/sh
-            args: -c "sed '/^nameserver 168.63.129.16$/d' /etc/resolv.conf > /etc/resolv.conf && cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/ >> $GITHUB_OUTPUT"
+            args: -c "echo "nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\nnameserver 100.95.0.254" > /etc/resolv.conf && cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/ >> $GITHUB_OUTPUT"
 
         - run: |
             echo "Docker curl output: ${{join(steps.test_docker_curl.outputs.*, '\n')}}"
