--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,7 @@ jobs:
             - runs-on: ubuntu-22.04-arm
               service-key: SERVICE_KEY_ARM2
       runs-on: ${{ matrix.runs-on }}
+      timeout-minutes: 3
       steps:
         - uses: actions/checkout@v4
 
@@ -93,6 +94,7 @@ jobs:
             - runs-on: windows-2022
               service-key: SERVICE_KEY_WIN3
       runs-on: ${{ matrix.runs-on }}
+      timeout-minutes: 6
       steps:
         - uses: actions/checkout@v4
 
@@ -105,14 +107,14 @@ jobs:
         - uses: ./.github/actions/test
           with:
             service-key: ${{ secrets[matrix.service-key] }}
-  
+
         - name: Access a secure resource
           shell: powershell
           env:
             TEST_URL: http://business.prod.beamreachinc.int/
           run: |
             Write-Host "Calling $env:TEST_URL 🚀"
-            Invoke-WebRequest -Uri $env:TEST_URL -Verbose
+            Invoke-WebRequest -Uri $env:TEST_URL -Verbose -TimeoutSec 10 -UseBasicParsing
 
         - name: Print client logs
           shell: powershell
