--- a/action.yml
+++ b/action.yml
@@ -102,7 +102,7 @@ runs:
 
         echo "::group::Installing Container"
         brew install container
-        container system start
+        container system start --enable-kernel-install
         echo "::endgroup::"
 
         docker run -d -p 80:80 nginx:latest
