--- a/action.yml
+++ b/action.yml
@@ -100,9 +100,14 @@ runs:
         brew update
         echo "::endgroup::"
 
-        echo "::group::Installing Container"
+        echo "::group::Installing Docker and Container"
         brew install container docker
-        container system start --enable-kernel-install
         echo "::endgroup::"
 
+        echo "::group::Starting Container"
+        container system start --disable-kernel-install
+        echo "::endgroup::"
+
+        echo "::group::Running Docker"
         docker run -d -p 80:80 nginx:latest
+        echo "::endgroup::"
